Jolla Phone Refined.

--- a/phone.htm
+++ b/phone.htm
@@ -1887,56 +1887,45 @@ Mugen Power 3.7V 3200mA電池</a><br>
 Jolla Phone</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/jolla/review.htm">
-介紹</a><br>
+&dash;
+<a href="phone/jolla_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="phone/jolla/recovery.htm">
+&dash;
+<a href="phone/jolla_recovery.htm">
 Recovery Mode</a><br>
 
-&lowast;
-<a href="phone/jolla/backup.htm">
+&dash;
+<a href="phone/jolla_backup.htm">
 如何備份系統</a><br>
 
-&lowast;
-<a href="phone/jolla/install_sudo.htm">
-如何安裝sudo</a><br>
-
-&lowast;
-<a href="phone/jolla/install_warehouse.htm">
-如何安裝Warehouse</a><br>
-
-&lowast;
-<a href="phone/jolla/terminal.htm">
+&dash;
+<a href="phone/jolla_terminal.htm">
 如何開啟Terminal</a><br>
 
-&lowast;
-<a href="phone/jolla/terminal_fix.htm">
+&dash;
+<a href="phone/jolla_warehouse.htm">
+如何安裝Warehouse</a><br>
+
+&dash;
+<a href="phone/jolla_terminal_fix.htm">
 如何解決Terminal游標問題</a><br>
 
-&lowast;
-<a href="phone/jolla/tohkbd2_sch.htm">
+&dash;
+<a href="phone/jolla_tohkbd2_sch.htm">
 TOHKBD2電路圖</a><br>
 
-&lowast;
-<a href="phone/jolla/teardown_tohkbd2.htm">
+&dash;
+<a href="phone/jolla_teardown_tohkbd2.htm">
 拆解TOHKBD2鍵盤</a><br>
 
-&lowast;
-<a href="phone/jolla/fix_tohkbd2.htm">
+&dash;
+<a href="phone/jolla_fix_tohkbd2.htm">
 改善TOHKBD2鍵盤</a><br>
 
-&lowast;
-<a href="phone/jolla/setup_tohkbd2.htm">
+&dash;
+<a href="phone/jolla_setup_tohkbd2.htm">
 安裝TOHKBD2鍵盤驅動程式</a><br>
-
-&oplus;
-<b>Debian 9</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/jolla/debian9/setup.htm">
-    安裝系統</a><br>
 <br><br><br><br>
 
 <div id="curve9320"></div>
