--- a/phone.htm
+++ b/phone.htm
@@ -1933,31 +1933,31 @@ TOHKBD2電路圖</a><br>
 Blackberry Curve9320</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/curve9320/review.htm">
+&dash;
+<a href="phone/curve9320_review.htm">
 介紹</a><br>
 
-&lowast;
-<a href="phone/curve9320/screenshot.htm">
-擷取畫面</a><br>
-
-&lowast;
-<a href="phone/curve9320/install.htm">
+&dash;
+<a href="phone/curve9320_setup.htm">
 安裝系統</a><br>
 
-&lowast;
-<a href="phone/curve9320/memory.htm">
+&dash;
+<a href="phone/curve9320_screenshot.htm">
+擷取畫面</a><br>
+
+&dash;
+<a href="phone/curve9320_memory.htm">
 自動釋放記憶體</a><br>
 
 &oplus;
 <b>Java</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/curve9320/java/setup.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/curve9320_java_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="phone/curve9320/java/hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="phone/curve9320_java_hello.htm">
     Hello, world!</a>
 <br><br><br><br>
 
