Sony Xperia X Compact Refined.

--- a/phone.htm
+++ b/phone.htm
@@ -2083,16 +2083,17 @@ Partition Table</a><br>
 <h3><img src="img/photos/f5321.jpg" class="floatLeft"/>
 Sony Xperia X Compact</h3>
 <hr size="1"><br><br><br><br><br>
-&lowast;
-<a href="phone/f5321/review.htm">
-介紹</a><br>
 
-&lowast;
-<a href="phone/f5321/usb.htm">
+&dash;
+<a href="phone/f5321_spec.htm">
+簡要規格</a><br>
+
+&dash;
+<a href="phone/f5321_usb.htm">
 USB腳位</a><br>
 
-&lowast;
-<a href="phone/f5321/uart.htm">
+&dash;
+<a href="phone/f5321_uart.htm">
 UART腳位</a><br>
 <br><br><br><br>
 </p>
