Google Pixel 3a XL Refined.

--- a/phone/pixel3axl_dd_key.htm
+++ b/phone/pixel3axl_dd_key.htm
@@ -1,70 +1,26 @@
-﻿<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="../page_head.js"></script>
 
-  <link rel="shortcut icon" href="../../website.ico">
-  <link rel="stylesheet" type="text/css" href="../../styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="../../styles/shThemeDefault.css" />
-  <link rel="stylesheet" type="text/css" href="../../css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="../../css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
-  
-  <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="../../header.js"></script>
-<div id="page">
-<h3>Google Pixel 3a XL &gt;&gt; Droidian</h3>
-<p><b>如何客製化Keyboard Layout</b></p>
-<hr size="1">
+<h3><a href="../phone.htm">手機</a> - Google Pixel 3a XL - Droidian - <b>如何客製化Keyboard Layout</b></h3>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/zabalkansky/squeekboard-pckb-layout">squeekboard-pckb-layout</a><br>
-2. <a href="https://github.com/mikeshenson/Phosh-Squeekboard-Keyboard">Phosh-Squeekboard-Keyboard</a><br>
-3. <a href="https://gitlab.com/Ph42oN/squeekboard-terminal-layout">squeekboard-terminal-layout</a><br><br>
+https://gitlab.com/Ph42oN/squeekboard-terminal-layout<br>
+https://github.com/zabalkansky/squeekboard-pckb-layout<br>
+https://github.com/mikeshenson/Phosh-Squeekboard-Keyboard<br><br>
 
 squeekboard-pckb-layout<br>
-<img src="keyboard_layout/1.jpg" class="maxSize"><br>
-<img src="keyboard_layout/2.jpg" class="maxSize"><br><br>
+<img src="pixel3axl_dd_key/1.jpg" class="maxSize"><br>
+<img src="pixel3axl_dd_key/2.jpg" class="maxSize"><br><br>
 
 Phosh-Squeekboard-Keyboard<br>
-<img src="keyboard_layout/3.jpg" class="maxSize"><br>
-<img src="keyboard_layout/4.jpg" class="maxSize"><br>
-<img src="keyboard_layout/5.jpg" class="maxSize"><br><br>
+<img src="pixel3axl_dd_key/3.jpg" class="maxSize"><br>
+<img src="pixel3axl_dd_key/4.jpg" class="maxSize"><br>
+<img src="pixel3axl_dd_key/5.jpg" class="maxSize"><br><br>
 
 queekboard-terminal-layout<br>
-<img src="keyboard_layout/6.jpg" class="maxSize"><br><br>
+<img src="pixel3axl_dd_key/6.jpg" class="maxSize"><br><br>
 
 ~/.local/share/squeekboard/keyboards/custom.yaml
 </p>
@@ -158,7 +114,7 @@ buttons:
         label: "B"
 </pre>
 <p>
-<img src="keyboard_layout/7.jpg" class="maxSize"><br><br>
+<img src="pixel3axl_dd_key/7.jpg" class="maxSize"><br><br>
 
 ~/.local/share/squeekboard/keyboards/terminal/us.yaml
 </p>
@@ -365,15 +321,7 @@ buttons:
         label: "Alt"
 </pre>
 <p>
-<img src="keyboard_layout/8.jpg" class="maxSize">
+<img src="pixel3axl_dd_key/8.jpg" class="maxSize">
 </p>
 
-<p>
-<br><a href="../../phone.htm">返回上一頁</a>
-</p>
-
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="../tail.js"></script>
