India Added new page.

--- a/trip.htm
+++ b/trip.htm
@@ -19,6 +19,7 @@
 
 <div id="page"><br><br>
 <p>
+    <a href="#india">       <img src="img/photos/india.jpg"     class="t0" title="印度"/></a>
     <a href="#japan">       <img src="img/photos/japan.jpg"     class="t0" title="日本"/></a>
     <a href="#france">      <img src="img/photos/france.jpg"    class="t0" title="法國"/></a>
     <a href="#italy">       <img src="img/photos/italy.jpg"     class="t0" title="義大利"/></a>
@@ -27,6 +28,19 @@
 
 <div id="page"><br><br>
 <p>
+<div id="india"></div>
+<h3><img src="img/photos/india.jpg" class="floatLeft"/>
+印度</h3>
+<hr size="1"><br><br><br><br><br>
+
+    &oplus;
+    2024-09<br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="trip/india_bangalore.htm">
+        邦加羅爾</a><br>
+<br><br><br><br>
+
 <div id="japan"></div>
 <h3><img src="img/photos/japan.jpg" class="floatLeft"/>
 日本</h3>
