--- a/driver.htm
+++ b/driver.htm
@@ -952,7 +952,14 @@ Linux Device Driver(LDD)</h3>
     hello, world!</a><br>
 
 &oplus;
-<b>C/C++</b><br>
+<b>C/C++ (QEMU)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/ldd_cpp_qemu_setup.htm">
+    開發環境</a><br>
+
+&oplus;
+<b>C/C++ (PocketBeagle)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/ldd/arm_asm_setup.htm">
@@ -1204,6 +1211,10 @@ Kernel command line(CONFIG_CMDLINE)加上"--"</a><br>
 &lowast;
 <a href="driver/ldd/fix_modpost.htm">
 解決"scripts/mod/modpost: not found"問題</a><br>
+
+&dash;
+<a href="driver/ldd_fix_netconfig.htm">
+解決netconfig.h: No such file or directory問題</a><br>
 
 &lowast;
 <a href="driver/ldd/fix_test.htm">
