--- a/system.htm
+++ b/system.htm
@@ -617,27 +617,24 @@ AUTOSAR</h3>
 VxWorks</h3>
 <hr size="1"><br><br><br><br><br>
 
+&dash;
+<a href="system/vxworks_setup_qemu.htm">
+安裝系統</a><br>
+
+&dash;
+<a href="system/vxworks_build_rtp.htm">
+Build RTP</a><br>
+
+&dash;
+<a href="system/vxworks_build_dkm.htm">
+Build DKM</a><br>
+
 &oplus;
-<b>23.09</b><br>
+<b>C/C++</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/vxworks_23_09_setup_qemu.htm">
-    安裝系統(QEMU)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/vxworks_23_09_build_rtp.htm">
-    Build Example(RTP)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/vxworks_23_09_build_dkm.htm">
-    Build Example(DKM)</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    <b>C/C++</b><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="system/vxworks_23_09_cpp_msg.htm">
-        Message Queue</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/vxworks_cpp_msg.htm">
+    Message Queue</a><br>
 <br><br><br><br>
 
 <div id="autosd"></div>
