--- a/system/vxworks_build_dkm.htm
+++ b/system/vxworks_build_dkm.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../system.htm">系統</a> - VxWorks - 23.09 - <b>Build Example(RTP)</b></h3>
+<h3><a href="../system.htm">系統</a> - VxWorks - <b>Build DKM</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -13,10 +13,10 @@ https://d13321s3lxgewa.cloudfront.net/downloads/wrsdk-vxworks7-docs/2309/README_
 </p>
 <pre>
 $ source wrsdk-vxworks7-qemu/sdkenv.sh
-$ cd ~/wrsdk-vxworks7-qemu/examples/rtp/hello_cmake_rtp
+$ cd ~/wrsdk-vxworks7-qemu/examples/dkm/hello_cmake_dkm
 $ mkdir build
 $ cd build
-$ cmake -D CMAKE_TOOLCHAIN_FILE=~/wrsdk-vxworks7-qemu/vxsdk/sysroot/mk/rtp.toolchain.cmake .
+$ cmake -D CMAKE_TOOLCHAIN_FILE=~/wrsdk-vxworks7-qemu/vxsdk/sysroot/mk/dkm.toolchain.cmake ..
 $ make
 </pre><br>
 
@@ -25,7 +25,7 @@ $ make
 </p>
 <pre>
 -&gt; cmd
-[vxWorks *]# hello_cmake
+[vxWorks *]# ld &lt; hello_cmake
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
