--- a/system/vxworks_setup_qemu.htm
+++ b/system/vxworks_setup_qemu.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../system.htm">系統</a> - VxWorks - 23.09 - <b>安裝系統(QEMU)</b></h3>
+<h3><a href="../system.htm">系統</a> - VxWorks - <b>安裝系統</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
