Sailfish OS Refined.#

--- a/system.htm
+++ b/system.htm
@@ -586,8 +586,8 @@ Import Docker Image</a><br>
 Sailfish OS</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="system/sailfish/setup.htm">
+&dash;
+<a href="system/sfos_setup.htm">
 安裝環境</a><br>
 <br><br><br><br>
 
