--- a/system.htm
+++ b/system.htm
@@ -599,16 +599,16 @@ AUTOSAR</h3>
 &oplus;
 <b>SOME/IP</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/autosar/build_vsomeip-3.1.16.1.htm">
-    build vsomeip 3.1.16.1</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/autosar_build_vsomeip.htm">
+    Build vsomeip 3.1.16.1</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/autosar/scapy_tcp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/autosar_scapy_tcp.htm">
     如何使用SCAPY產生TCP PCAP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/autosar/scapy_udp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/autosar_scapy_udp.htm">
     如何使用SCAPY產生UDP PCAP</a><br>
 <br><br><br><br>
 
