--- a/system.htm
+++ b/system.htm
@@ -539,20 +539,17 @@ podman.sock</a><br>
 K8s</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="system/k8s/cli.htm">
+&dash;
+<a href="system/k8s_cli.htm">
 常見操作指令</a><br>
 
-&lowast;
-<a href="system/k8s/install_ubuntu.htm">
-如何安裝在Ubuntu系統上(VMware)</a><br>
+&dash;
+<a href="system/k8s_cve_2022_0847.htm">
+CVE-2022-0847</a><br>
 
-&oplus;
-<b>Container Escape</b><br>
-
-	&emsp;&emsp;&emsp;&emsp;&lowast;
-	<a href="system/k8s/cve-2022-0847.htm">
-	CVE-2022-0847</a><br>
+&dash;
+<a href="system/k8s_ubuntu.htm">
+如何安裝在Ubuntu系統上安裝K8s</a><br>
 <br><br><br><br>
 
 <div id="k3s"></div>
