--- a/system.htm
+++ b/system.htm
@@ -525,13 +525,14 @@ docker.sock</a><br>
 <h3><img src="img/photos/podman.jpg" class="floatLeft"/>
 Podman</h3>
 <hr size="1"><br><br><br><br><br>
-&lowast;
-<a href="system/podman/sock.htm">
-podman.sock</a><br>
 
-&lowast;
-<a href="system/podman/fix_sock.htm">
-解決沒有podman.socket的問題</a><br>
+&dash;
+<a href="system/podman_sock.htm">
+Podman.sock</a><br>
+
+&dash;
+<a href="system/podman_fix_sock.htm">
+解決沒有Podman.socket問題</a><br>
 <br><br><br><br>
 
 <div id="k8s"></div>
