--- a/system.htm
+++ b/system.htm
@@ -444,17 +444,17 @@ reset root passwd(CentOS 6)</a><br>
 Windows</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="system/windows/fix_nn.htm">
+&dash;
+<a href="system/windows_fix_nn.htm">
 解決網路芳鄰無法連接的問題</a><br>
 
-&lowast;
-<a href="system/windows/idrac_java.htm">
+&dash;
+<a href="system/windows_idrac.htm">
 解決Java無法連線到iDRAC Console的問題</a><br>
 
-&lowast;
-<a href="system/windows/fix_d3d.htm">
-解決"Cant initial object (CApplication)"問題</a><br>
+&dash;
+<a href="system/windows_fix_d3d.htm">
+解決Cant initial object (CApplication)問題</a><br>
 <br><br><br><br>
 
 <div id="docker"></div>
