--- a/system.htm
+++ b/system.htm
@@ -402,41 +402,41 @@ shell script "$、{}、%、#"用途</a><br>
 CentOS</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="system/centos/vmcore.htm">
-vmcore分析</a><br>
+&dash;
+<a href="system/centos_vmcore.htm">
+分析vmcore</a><br>
 
-&lowast;
-<a href="system/centos/mongo_init.htm">
+&dash;
+<a href="system/centos_mongo.htm">
 初始化MongoDB</a><br>
 
-&lowast;
-<a href="system/centos/reset_root_passwd.htm">
-reset root passwd(CentOS 6)</a><br>
+&dash;
+<a href="system/centos_reset_root_passwd.htm">
+Reset root passwd(CentOS 6)</a><br>
 
-&lowast;
-<a href="system/centos/fix_ifcfg.htm">
+&dash;
+<a href="system/centos_fix_ifcfg.htm">
 解決ifcfg無法套用設定的問題</a><br>
 
-&lowast;
-<a href="system/centos/ssh_tmux.htm">
+&dash;
+<a href="system/centos_ssh_tmux.htm">
 解決離開SSH Session無法繼續執行的問題</a><br>
 
-&lowast;
-<a href="system/centos/fix_postgresql_peer_auth.htm">
-解決"postgresql FATAL: Peer authentication ..."問題</a><br>
+&dash;
+<a href="system/centos_fix_postgresql_peer_auth.htm">
+解決postgresql FATAL: Peer authentication ...問題</a><br>
 
-&lowast;
-<a href="system/centos/fix_postgresql_utf8.htm">
-解決"postgresql Error: new encoding (UTF8) ..."問題</a><br>
+&dash;
+<a href="system/centos_fix_postgresql_utf8.htm">
+解決postgresql Error: new encoding (UTF8) ...問題</a><br>
 
-&lowast;
-<a href="system/centos/fix_yum.htm">
-解決"Failed to download metadata for repo appstream"問題</a><br>
+&dash;
+<a href="system/centos_fix_yum.htm">
+解決Failed to download metadata for repo appstream問題</a><br>
 
-&lowast;
-<a href="system/centos/fix_sqlmode.htm">
-解決"ALTER TABLE causes auto_increment resequencing, resulting in duplicate entry"問題</a><br>
+&dash;
+<a href="system/centos_fix_sqlmode.htm">
+解決ALTER TABLE causes auto_increment resequencing, resulting in duplicate entry問題</a><br>
 <br><br><br><br>
 
 <div id="windows"></div>
