--- a/system.htm
+++ b/system.htm
@@ -46,173 +46,85 @@ Debian</h3>
 <a href="system/debian_build_wine.htm">
 Build Wine</a><br>
 
-&lowast;
-<a href="system/debian/fonts.htm">
-中文字型</a><br>
-
-&lowast;
-<a href="system/debian/pdf2jpg.htm">
-PDF轉JPG</a><br>
-
-&lowast;
-<a href="system/debian/time_diff.htm">
-time diff</a><br>
-
-&lowast;
-<a href="system/debian/ssh_tunnel.htm">
+&dash;
+<a href="system/debian_ssh_tunnel.htm">
 SSH Tunnel</a><br>
 
-&lowast;
-<a href="system/debian/ssh_tunnel_rsync.htm">
+&dash;
+<a href="system/debian_ssh_tunnel_rsync.htm">
 SSH Tunnel(rsync)</a><br>
 
-&lowast;
-<a href="system/debian/clang-format.htm">
-clang-format</a><br>
-
-&lowast;
-<a href="system/debian/wait_pid_start.htm">
-等待Process出現</a><br>
-
-&lowast;
-<a href="system/debian/uefi_usbdisk.htm">
-製作UEFI USB開機碟</a><br>
-
-&lowast;
-<a href="system/debian/mount_disk.htm">
-掛載多組分割表的檔案</a><br>
-
-&lowast;
-<a href="system/debian/dwa-131.htm">
-安裝DWA-131驅動程式</a><br>
-
-&lowast;
-<a href="system/debian/wpa_supplicant.htm">
-wpa_supplicant設定</a><br>
-
-&lowast;
-<a href="system/debian/truncate_syslog.htm">
-清除/var/log/syslog</a><br>
-
-&lowast;
-<a href="system/debian/astyle_param.htm">
-artistic style推薦參數</a><br>
-
-&lowast;
-<a href="system/debian/a650ua.htm">
-安裝TOTOLINK A650UA驅動程式</a><br>
-
-&lowast;
-<a href="system/debian/shell_expand.htm">
-shell script "$、{}、%、#"用途</a><br>
-
-&lowast;
-<a href="system/debian/txt2jpg.htm">
-如何把文字轉成圖片</a><br>
-
-&lowast;
-<a href="system/debian/runlevel.htm">
-如何改變Run-Level</a><br>
-
-&lowast;
-<a href="system/debian/jmtpfs.htm">
-如何自動掛載MTP裝置</a><br>
-
-&lowast;
-<a href="system/debian/png-to-lcd.htm">
-如何使用png-to-lcd</a><br>
-
-&lowast;
-<a href="system/debian/minicom_color.htm">
-如何讓minicom彩色化</a><br>
-
-&lowast;
-<a href="system/debian/minicom_rows.htm">
-如何改變minicom rows、cols</a><br>
-
-&lowast;
-<a href="system/debian/shell2file.htm">
-如何把Shell的執行過程存到檔案</a><br>
-
-&lowast;
-<a href="system/debian/deactive_cursor.htm">
-如何關閉開機顯示的命令列Cursor</a><br>
-
-&lowast;
-<a href="system/debian/vim_ctrl_s.htm">
-解決"vim CTRL+S"問題</a><br>
+&dash;
+<a href="system/debian_shell_expand.htm">
+Shell Script($、{}、%、#)</a><br>
 
 &dash;
-<a href="system/debian_fix_python3_env.htm">
-解決Python3 externally-managed-environment問題</a><br>
+<a href="system/debian_fonts.htm">
+如何安裝中文字型</a><br>
 
-&lowast;
-<a href="system/debian/fix_gcc-pie.htm">
+&dash;
+<a href="system/debian_mount_disk.htm">
+如何掛載分割表檔案</a><br>
+
+&dash;
+<a href="system/debian_runlevel.htm">
+如何改變Run-Level</a><br>
+
+&dash;
+<a href="system/debian_jmtpfs.htm">
+如何自動掛載MTP裝置</a><br>
+
+&dash;
+<a href="system/debian_clang_format.htm">
+如何使用clang-format</a><br>
+
+&dash;
+<a href="system/debian_fix_proc_usb.htm">
+解決沒有/proc/bus/usb問題</a><br>
+
+&dash;
+<a href="system/debian_fix_gprof.htm">
 解決gprof沒有輸出訊息的問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_proc_usb.htm">
-解決沒有"/proc/bus/usb"的問題</a><br>
+&dash;
+<a href="system/debian_fix_ibus_cursor.htm">
+解決iBus pinyin輸入法無法顯示Cursor問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_ibus_cursor.htm">
-解決ibus pinyin輸入法無法顯示cursor的問題</a><br>
+&dash;
+<a href="system/debian_fix_github_large_file.htm">
+解決Error: GH001: Large files detected問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_github_large_file.htm">
-解決"error: GH001: Large files detected"問題</a><br>
+&dash;
+<a href="system/debian_fix_gir1.2.htm">
+解決Cannot get content of gir1.2-ibus-1.0問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_gir1.2.htm">
-解決"cannot get content of gir1.2-ibus-1.0"問題</a><br>
+&dash;
+<a href="system/debian_fix_major.htm">
+解決Implicit declaration of function major問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_major.htm">
-解決"implicit declaration of function major"問題</a><br>
+&dash;
+<a href="system/debian_fix_github.htm">
+解決Github: refusing to update checked out branch問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_vncserver.htm">
-解決"rfb/rfbclient.h: No such file or directory"問題</a><br>
+&dash;
+<a href="system/debian_fix_debootstrap.htm">
+解決debootstrap ... test-dev-null: Permission denied問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_fakeroot.htm">
-解決"fakeroot while creating ... not implemented"問題</a><br>
+&dash;
+<a href="system/debian_fix_sudo.htm">
+解決sudo: effective uid is not 0 ... root privileges問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_unwind.htm">
-解決"unwind: target platform=x86 is not supported"問題</a><br>
+&dash;
+<a href="system/debian_fix_cfi.htm">
+解決open cfi at the end of file missing .cfi_endproc directive問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_vncclient.htm">
-解決"undefined reference to rfbClientGetClientData"問題</a><br>
+&dash;
+<a href="system/debian_fix_perf.htm">
+解決Cycles: PMU Hardware doesnt support sampling/overflow-interrupts問題</a><br>
 
-&lowast;
-<a href="system/debian/fix_github.htm">
-解決"github: refusing to update checked out branch"問題</a><br>
-
-&lowast;
-<a href="system/debian/fix_sudo.htm">
-解決"sudo: effective uid is not 0 ... root privileges"問題</a><br>
-
-&lowast;
-<a href="system/debian/fix_debootstrap.htm">
-解決"debootstrap ... test-dev-null: Permission denied"問題</a><br>
-
-&lowast;
-<a href="system/debian/fix_cfi.htm">
-解決"open cfi at the end of file missing .cfi_endproc directive"問題</a><br>
-
-&lowast;
-<a href="system/debian/fix_ucontext.htm">
-解決"dereferencing pointer to incomplete type struct ucontext"問題</a><br>
-
-&lowast;
-<a href="system/debian/fix_perf.htm">
-解決"cycles: PMU Hardware doesnt support sampling/overflow-interrupts"問題</a><br>
-
-&lowast;
-<a href="system/debian/fix_hardfp.htm">
-解決"BFD_ASSERT (out_attr[Tag_ABI_HardFP_use].i == 0) assert failed elf32-arm.c"問題</a><br>
+&dash;
+<a href="system/debian_fix_hardfp.htm">
+解決BFD_ASSERT (out_attr[Tag_ABI_HardFP_use].i == 0) assert failed elf32-arm.c問題</a><br>
 
 &oplus;
 <b>QEMU</b><br>
