--- a/system.htm
+++ b/system.htm
@@ -59,6 +59,10 @@ SSH Tunnel</a><br>
 SSH Tunnel(rsync)</a><br>
 
 &dash;
+<a href="system/debian_dash.htm">
+Parameter(--)</a><br>
+
+&dash;
 <a href="system/debian_shell_expand.htm">
 Shell Script($、{}、%、#)</a><br>
 
@@ -177,130 +181,108 @@ Shell Script($、{}、%、#)</a><br>
 <b>Kernel</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="system/debian_core_dump.htm">
+    <a href="system/debian_kernel_png2ppm.htm">
+    PNG to PPM</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_cpio.htm">
+    Repack cpio</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_dis_zimage.htm">
+    Extract zImage</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_dis_dtb.htm">
+    Decompiler DTB</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_dis_vmlinuz.htm">
+    Extract vmlinuz.bin</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_extract_dtb.htm">
+    Extract DTB from zImage</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_core_dump.htm">
     如何產生Core Dump</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/double_dash.htm">
-    -- parameter</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/decompiler_dtb.htm">
-    decompiler dtb</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/reverse_zimage.htm">
-    extract zImage</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/reverse_vmlinuz.bin.htm">
-    extract vmlinuz.bin</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="mcu/nuc972/framebuffer_console.htm">
-    framebuffer console</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/cpio.htm">
-    extract、repack cpio</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/png2ppm.htm">
-    png to ascii 224 ppm</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/extract_dtb.htm">
-    extract dtb from zImage</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_kernel_fb.htm">
+    如何開啟Framebuffer Console</a><br>
 
 &oplus;
 <b>Memory</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/kcachegrind.htm">
-    如何使用kcachegrind查看呼叫順序</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/valgrind.htm">
-    如何使用valgrind測試service程式</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_mem_kcachegrind.htm">
+    如何使用KCacheGrind查看呼叫順序</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/valgrind_mm.htm">
-    如何使用valgrind找出memory leak</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_mem_valgrind_service.htm">
+    如何使用ValGrind測試Service程式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_mem_valgrind_memory.htm">
+    如何使用ValGrind找出Memory Leak</a><br>
 
 &oplus;
 <b>Performance</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/perf.htm">
-    如何使用perf找出程式耗時的副程式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/gprof.htm">
-    如何使用gprof找出程式耗時的副程式</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_perf_perf.htm">
+    如何使用Perf找出程式耗時的副程式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/gprof2dot.htm">
-    如何使用gprof2dot找出程式耗時的副程式</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_perf_gprof.htm">
+    如何使用GProf找出程式耗時的副程式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/flame.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_perf_flame.htm">
     如何使用Flame Graphs找出耗時的副程式</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/fix_perf13.htm">
-    解決"perf_event_open(..., PERF_FLAG_FD_CLOEXEC) failed with unexpected error 13"問題</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_perf_gprof2dot.htm">
+    如何使用GProf2Dot找出程式耗時的副程式</a><br>
 
-&oplus;
-<b>Android</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/android_emu.htm">
-    android emulator</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/android_adb.htm">
-    virtual adb device</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_perf_fix_perf13.htm">
+    解決Perf_event_open(..., PERF_FLAG_FD_CLOEXEC) failed with unexpected error 13問題</a><br>
 
 &oplus;
 <b>VirtualBox</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/resize_vdi.htm">
-    resize VDI file</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/vbox_find_ip.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_vm_resize_vdi.htm">
+    Resize VDI</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_vm_find_ip.htm">
     如何找出Client IP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/vbox_net0.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_vm_net0.htm">
     如何產生vboxnet0 192.168.56.1</a><br>
 
 &oplus;
 <b>File System</b><br>
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/file_attribute.htm">
-    如何修改檔案屬性</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/mount_cifs.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_file_mount_cifs.htm">
     如何掛載cifs檔案</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/mount_ubifs.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_file_mount_ubifs.htm">
     如何掛載ubifs檔案</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/ubidump.htm">
-    如何解開ubifs檔案(ubidump)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_file_ubidump.htm">
+    如何解開ubifs檔案</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/rename.htm">
-    如何將檔名轉成小寫</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/yaffs2.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_file_yaffs2.htm">
     如何製作yaffs2檔案</a><br>
-    
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="system/debian/detox.htm">
-    如何移除空白字元檔名</a><br>
 <br><br><br><br>
 
 <div id="centos"></div>
