--- a/umpc.htm
+++ b/umpc.htm
@@ -250,7 +250,7 @@ iriver Dicple D8</h3>
 
 &dash;
 <a href="umpc/d8_spec.htm">
-介紹</a><br>
+簡要規格</a><br>
 
 &dash;
 <a href="umpc/d8_teardown.htm">
@@ -326,12 +326,12 @@ Build U-Boot</a><br>
 
 <div id="d88"></div>
 <h3><img src="img/photos/d88.jpg" class="floatLeft"/>
-iriver Dicple D88</h3>
+iRiver Dicple D88</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/d88/review.htm">
-介紹</a><br>
+&dash;
+<a href="umpc/d88_spec.htm">
+簡要規格</a><br>
 
 &lowast;
 <a href="umpc/d88/teardown.htm">
