--- a/umpc.htm
+++ b/umpc.htm
@@ -531,12 +531,12 @@ Build mkyaffs2image</a><br>
 iRiver Dicple D100</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="umpc/d100/review.htm">
-介紹</a><br>
+&dash;
+<a href="umpc/d100_spec.htm">
+簡要規格</a><br>
 
-&lowast;
-<a href="umpc/d100/teardown.htm">
+&dash;
+<a href="umpc/d100_teardown.htm">
 拆機</a><br>
 <br><br><br><br>
 
