--- a/umpc.htm
+++ b/umpc.htm
@@ -397,7 +397,7 @@ RTC取得、設定</a><br>
 <a href="umpc/d88_extract_yaffs2.htm">
 如何解開yaffs2檔案</a><br>
 
-&lowast;
+&dash;
 <a href="umpc/d88_flash.htm">
 如何透過USBBoot刷機</a><br>
 
@@ -409,8 +409,8 @@ RTC取得、設定</a><br>
 <a href="umpc/d88_get_bl.htm">
 如何取得背光按鍵的狀態</a><br>
 
-&lowast;
-<a href="umpc/d88/repack_yaffs2.htm">
+&dash;
+<a href="umpc/d88_repack_yaffs2.htm">
 如何打包rootfs.yaffs2</a><br>
 
 &dash;
@@ -461,15 +461,15 @@ NAND Partitions</a><br>
 <a href="umpc/d88_build_gdb.htm">
 Build GDB</a><br>
 
-&lowast;
+&dash;
 <a href="umpc/d88_build_uboot.htm">
 Build U-Boot</a><br>
 
-&lowast;
+&dash;
 <a href="umpc/d88_build_gmenu2x.htm">
 Build GMenu2X</a><br>
 
-&lowast;
+&dash;
 <a href="umpc/d88_build_mkyaffs2image.htm">
 Build mkyaffs2image</a><br>
 
@@ -480,11 +480,11 @@ Build mkyaffs2image</a><br>
     <a href="umpc/d88_stock_kallsym.htm">
     /proc/kallsym</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/d88_stock_setup.htm">
     安裝系統</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/d88_stock_dual.htm">
     安裝雙系統選單</a><br>
 
@@ -492,14 +492,14 @@ Build mkyaffs2image</a><br>
     <a href="umpc/d88_stock_debug.htm">
     如何透過USB UART Debug</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/d88_stock_build_kernel.htm">
     Build Kernel 2.6.24</a><br>
 
 &oplus;
 <b>RetroFW</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/d88_retrofw_setup.htm">
     安裝系統</a><br>
 
@@ -507,7 +507,7 @@ Build mkyaffs2image</a><br>
     <a href="umpc/d88_retrofw_debug.htm">
     如何透過USB UART Debug</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/d88_retrofw_build_gmenunx.htm">
     Build GMenuNX</a><br>
     
@@ -521,7 +521,7 @@ Build mkyaffs2image</a><br>
 &oplus;
 <b>Debian 6</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="umpc/d88_debian6_setup.htm">
     安裝系統</a><br>
 <br><br><br><br>
