--- a/umpc/d88_build_mkyaffs2image.htm
+++ b/umpc/d88_build_mkyaffs2image.htm
@@ -6,8 +6,8 @@
 <hr size="1"><br>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/website/releases/download/d88/yaffs2.tar.gz
-$ tar xvf yaffs2.tar.gz
+$ wget https://github.com/steward-fu/website/releases/download/iriver-d88/src_yaffs2.tar.gz
+$ tar xvf src_yaffs2.tar.gz
 $ yaffs2/utils/
 $ make clean
 $ make
