--- a/umpc/d88_build_uboot.htm
+++ b/umpc/d88_build_uboot.htm
@@ -6,7 +6,7 @@
 <hr size="1"><br>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/website/releases/download/d88/mipseltools-gcc412-glibc261.tar
+$ wget https://github.com/steward-fu/website/releases/download/iriver-d88/mipseltools-gcc412-glibc261.tar
 $ tar xvf mipseltools-gcc412-glibc261.tar
 $ sudo mv mipseltools-gcc412-glibc261 /opt/
 $ export PATH=/opt/mipseltools-gcc412-glibc261/bin:$PATH
@@ -17,7 +17,9 @@ $ mipsel-linux-gcc --version
     warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 $ cd
-$ git clone https://github.com/steward-fu/bootloader -b jz4755_d88_uboot-2009.05
+$ wget https://github.com/steward-fu/website/releases/download/iriver-d88/src_bootloader-jz4755_d88_uboot-2009.05.zip
+$ unzip src_bootloader-jz4755_d88_uboot-2009.05.zip
+$ cd bootloader-jz4755_d88_uboot-2009.05
 $ make cetus_nand_config
 $ make -j4
 </pre>
