--- a/umpc/d88_debian6_setup.htm
+++ b/umpc/d88_debian6_setup.htm
@@ -31,7 +31,7 @@ $ sudo chroot squeeze
     /swap.img none  swap  sw  0  0
 
 # cd /dev
-# wget https://github.com/steward-fu/archives/releases/download/d8/devnode.tar.gz
+$ wget https://github.com/steward-fu/website/releases/download/iriver-d88/devnode.tar.gz
 # tar xvf devnode.tar.gz
 # rm devnode.tar.gz
 
@@ -53,7 +53,7 @@ $ sudo umount squeeze/proc
 </pre>
 <p>
 2. 進入刷機模式<br>
-3. 刷入https://github.com/steward-fu/archives/website/download/d88/debian6_flash.zip<br>
+3. 刷入https://github.com/steward-fu/website/releases/download/iriver-d88/debian6_flash.zip<br>
 4. 準備一張MicroSD(如：SanDISK 16GB)，格式成如下分區<br>
 <img src="d88_debian6_setup/1.jpg" class="maxSize"><br><br>
 
