--- a/umpc/d88_stock_build_kernel.htm
+++ b/umpc/d88_stock_build_kernel.htm
@@ -6,7 +6,7 @@
 <hr size="1"><br>
 <pre>
 $ cd
-$ wget https://github.com/steward-fu/website/releases/download/d88/mipseltools-gcc412-glibc261.tar
+$ wget https://github.com/steward-fu/website/releases/download/iriver-d88/mipseltools-gcc412-glibc261.tar
 $ tar xvf mipseltools-gcc412-glibc261.tar
 $ sudo mv mipseltools-gcc412-glibc261 /opt/
 $ export PATH=/opt/mipseltools-gcc412-glibc261/bin:$PATH
@@ -17,8 +17,9 @@ $ mipsel-linux-gcc --version
     warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 $ cd
-$ git clone https://github.com/steward-fu/kernel -b jz4755_d8_linux-2.6.24
-$ cd kernel
+$ wget https://github.com/steward-fu/website/releases/download/iriver-d88/src_kernel-2.6.24.zip
+$ unzip src_kernel-2.6.24.zip
+$ cd kernel-jz4755_d8_linux-2.6.24
 $ make d88_defconfig
 $ make all -j4
 </pre>
