--- a/index.htm
+++ b/index.htm
@@ -387,6 +387,10 @@ UART改造</a><br>
     解決/dev/dsp只有單聲道輸出問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_fix_service.htm">
+    解決systemd-journald NO_NEW_PRIVILEGES問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_mark3_runlevel.htm">
     如何跑Run Level 3</a><br>
 
