Pandora Fixed kernel pic issue.

--- a/index.htm
+++ b/index.htm
@@ -391,6 +391,10 @@ UART改造</a><br>
     解決systemd-journald NO_NEW_PRIVILEGES問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_mark3_fix_pie.htm">
+    解決Error: code model kernel does not support PIC mode問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_mark3_runlevel.htm">
     如何跑Run Level 3</a><br>
 
