Pandora How to build pvrsrvkm.ko file.

--- a/index.htm
+++ b/index.htm
@@ -414,6 +414,10 @@ UART改造</a><br>
     <a href="handheld/pandora_1ghz_mark2_build_kernel.htm">
     Build Kernel</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_1ghz_mark2_build_pvr.htm">
+    Build GFX_Linux_KM 4.10.00(pvrsrvkm.ko)</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>C/C++</b><br>
 
