Pandora How to setup debian 12.

--- a/index.htm
+++ b/index.htm
@@ -364,6 +364,13 @@ UART改造</a><br>
 如何固定電池</a><br>
 
 &oplus;
+<b>Debian 12</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_debian12_setup.htm">
+    安裝系統</a><br>
+
+&oplus;
 <b>Debian(Mark3)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
