--- a/index.htm
+++ b/index.htm
@@ -370,6 +370,14 @@ UART改造</a><br>
     <a href="handheld/pandora_rebirth_debian12_setup.htm">
     安裝系統</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_debian12_ts.htm">
+    如何校正觸控</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_debian12_fix_ts.htm">
+    解決ts_setup: No such file or directory問題</a><br>
+
 &oplus;
 <b>Debian(Mark3)</b><br>
 
